--- a/Classroom.html
+++ b/Classroom.html
@@ -45,7 +45,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/index.html"><img src="img/logo.png" alt="Guardian Ad Litem" height="30" width="50"></a>
+          <a class="navbar-brand" href="http://carolinegoodrich.github.io/index.html"><img src="img/logo.png" alt="Guardian Ad Litem" height="30" width="50"></a>
             <form class="navbar-form navbar-left">
             <input type="text" class="form-control" placeholder="Search GAL Training">
           </form>
@@ -66,10 +66,10 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li><a href="/index.html">Independent Study</a></li>
-            <li class="active"><a href="/Classroom.html">Classroom Study <span class="sr-only">(current)</span></a></li>
-            <li><a href="/fieldwork.html">Field Work</a></li>
-            <li><a href="/recertification.html">Yearly Re-Certifications</a></li>
+            <li><a href="http://carolinegoodrich.github.io/index.html">Independent Study</a></li>
+            <li class="active"><a href="http://carolinegoodrich.github.io/Classroom.html">Classroom Study <span class="sr-only">(current)</span></a></li>
+            <li><a href="http://carolinegoodrich.github.io/fieldwork.html">Field Work</a></li>
+            <li><a href="http://carolinegoodrich.github.io/recertification.html">Yearly Re-Certifications</a></li>
           </ul>
           <hr>
           <ul class="nav nav-sidebar">
