ok actually fixed

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://carolinegoodrich.github.io/index.html"><img src="img/logo.png" alt="Guardian Ad Litem" height="30" width="50"></a>
+          <a class="navbar-brand" href="http://carolinegoodrich.github.io/GAL-Dashboard/index.html"><img src="img/logo.png" alt="Guardian Ad Litem" height="30" width="50"></a>
             <form class="navbar-form navbar-left">
             <input type="text" class="form-control" placeholder="Search GAL Training ">
           </form>
@@ -67,9 +67,9 @@
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
             <li class="active"><a href="http://carolinegoodrich.github.io/index.html">Independent Study <span class="sr-only">(current)</span></a></li>
-            <li><a href="http://carolinegoodrich.github.io/Classroom.html">Classroom Study</a></li>
-            <li><a href="http://carolinegoodrich.github.io/fieldwork.html">Field Work</a></li>
-            <li><a href="http://carolinegoodrich.github.io/recertification.html">Yearly Re-Certifications</a></li>
+            <li><a href="http://carolinegoodrich.github.io/GAL-Dashboard/Classroom.html">Classroom Study</a></li>
+            <li><a href="http://carolinegoodrich.github.io/GAL-Dashboard/fieldwork.html">Field Work</a></li>
+            <li><a href="http://carolinegoodrich.github.io/GAL-Dashboard/recertification.html">Yearly Re-Certifications</a></li>
           </ul>
           <hr>
           <ul class="nav nav-sidebar">
