--- a/recertification.html
+++ b/recertification.html
@@ -66,10 +66,10 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li><a href="http://carolinegoodrich.github.io/index.html">Independent Study</a></li>
-            <li><a href="http://carolinegoodrich.github.io/Classroom.html">Classroom Study</a></li>
-            <li><a href="http://carolinegoodrich.github.io/fieldwork.html">Field Work</a></li>
-            <li class="active"><a href="http://carolinegoodrich.github.io/recertification.html">Yearly Re-Certifications <span class="sr-only">(current)</span></a></li>
+            <li><a href="http://carolinegoodrich.github.io/GAL-Dashboard/index.html">Independent Study</a></li>
+            <li><a href="http://carolinegoodrich.github.io/GAL-Dashboard/Classroom.html">Classroom Study</a></li>
+            <li><a href="http://carolinegoodrich.github.io/GAL-Dashboard/fieldwork.html">Field Work</a></li>
+            <li class="active"><a href="http://carolinegoodrich.github.io/GAL-Dashboard/recertification.html">Yearly Re-Certifications <span class="sr-only">(current)</span></a></li>
           </ul>
           <hr>
           <ul class="nav nav-sidebar">
