--- a/Classroom.html
+++ b/Classroom.html
@@ -45,7 +45,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://carolinegoodrich.github.io/index.html"><img src="img/logo.png" alt="Guardian Ad Litem" height="30" width="50"></a>
+          <a class="navbar-brand" href="http://carolinegoodrich.github.io/GAL-Dashboard/index.html"><img src="img/logo.png" alt="Guardian Ad Litem" height="30" width="50"></a>
             <form class="navbar-form navbar-left">
             <input type="text" class="form-control" placeholder="Search GAL Training">
           </form>
