--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="http://carolinegoodrich.github.io/index.html">Independent Study <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="http://carolinegoodrich.github.io/GAL-Dashboard/index.html">Independent Study <span class="sr-only">(current)</span></a></li>
             <li><a href="http://carolinegoodrich.github.io/GAL-Dashboard/Classroom.html">Classroom Study</a></li>
             <li><a href="http://carolinegoodrich.github.io/GAL-Dashboard/fieldwork.html">Field Work</a></li>
             <li><a href="http://carolinegoodrich.github.io/GAL-Dashboard/recertification.html">Yearly Re-Certifications</a></li>
